[package]
name = "rplidar-rppal"
version = "0.1.0"
edition = "2021"
authors = ["Braden Everson <bradeneverson@gmail.com>"]
description = "A Rust crate for accessing RpLidar A1 sensor data using the rppal library on a Raspberry Pi."
license = "MIT"
documentation = "https://docs.rs/rplidar-rppal"
readme = "README.md"
keywords = ["uart", "rppal", "raspberry-pi", "lidar"]
categories = ["embedded", "hardware-support"]

[dependencies]
rppal = "0.19.0"

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
